<resources>
    <string name="app_name">MYce Cream</string>
    <string name="facebook_app_id" translatable="false">185450658798188</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb185450658798188</string>
    <string name="Username">Username</string>
    <string name="Password" translatable="false">Password</string>
    <string name="SignIn" translatable="true">Sign In</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="Or">Or</string>
    <string name="IfNoAccount">If you don\'t have an account</string>
    <string name="TapHere">Tap Here</string>
    <string name="RememberMe">Remember me</string>
    <string name="LogInFail">Email or password are wrong!</string>
    <string name="Email">Email</string>
    <string name="SampleEmail" translatable="false">abcde@domain.xxx</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="server_client_id" translatable="false">542722246940-ovn0ocouer53386u1nv16up08n0cqr3n.apps.googleusercontent.com</string>
    <string name="Register">Register!</string>
    <string-array name="productAttributes">
        <item name="id">Id</item>
        <item name="name">Name</item>
        <item name="description">Description</item>
        <item name="price">Price</item>
        <item name="code">Code</item>
    </string-array>
    <string name="LogOut">Log Out</string>
    <string name="RegistrationOk">Your account was successfully registered!</string>
    <string name="WrongMail">Not valid Email</string>
    <string name="BuyNow">Buy Now!</string>
    <string name="qrCodeDialogTitle">Here is your QR Code!\nShow it to the bar</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="myProfile">My Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="action_settings">Settings</string>
    <string name="Bday">Birthday</string>
    <string name="title_offer_list">Offers</string>
    <string name="title_offer_detail">Offer Detail</string>
    <string name="help">Help</string>
    <string name="allow_notification">Allow Notifications</string>
    <string name="needHelp">Need help?\nPlease fill in the form below\nYou will be contacted shortly</string>
    <string name="typeHere">Type Here...</string>
    <string name="sendForm">Send</string>
    <string name="CostInEuro">Price in euro</string>
    <string name="CostInPoint">Cost in point</string>
    <string name="ForYouAt">For you At</string>
    <string name="Redeem">Redeem it!</string>
    <string name="OfferDescription">Offer description</string>
    <string name="Discount">Discount</string>
    <string name="Point" translatable="false">IcePoint</string>
    <string name="DoUWntToUSe">Do you want to use</string>
    <plurals name="pointToUse">
        <item quantity="one">Do you want to use %d icePoint to redeem it?</item>
        <item quantity="other">Do you want to use %d icePoints to redeem it?</item>
    </plurals>
    <string name="home" translatable="false">Home</string>
    <string name="loggedAs">Logged As</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPw">Old Password</string>
    <string name="newPw">New Password</string>
    <string name="confirmNewPw">Confirm New Password</string>
    <string name="userProfile">User Profile</string>
    <string name="newPwConfirmNoMatch">The new Passwords Do Not Match</string>
    <string name="title_activity_stores">Map</string>
    <string name="stores">Stores</string>
    <string name="notificationGeofence">You are currently near our store in %s, touch here to get directions to reach us to get an icecream</string>
    <string name="notifications">Notifications</string>
    <string name="permissions">Permissions</string>
    <string name="allowGeolocations">Allow Geolocation</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="productDescription">Product Description</string>
    <string name="buyFor">Buy For €</string>
    <string name="redeemFor">Redeem for %d IcePoints</string>
    <string name="youHavePoints">You have %d IcePoints</string>
    <string name="game">Play Game!</string>
    <string name="PickDate">Pick date</string>
    <string name="goodOperation">Password changed successfully</string>
    <string name="dateShowText">Date picked: </string>
    <string name="tyForSend">Thank you for your feedback!</string>
    <string name="updatingPoints">Your point will be updated shortly</string>
    <string name="waitToPlay">You will be able to play again in:</string>
    <string name="loginFailed">Wrong password or email</string>
    <string name="showQrCode">Show Qr code</string>
    <string name="expireDate">Offer valid until</string>

</resources>
