<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/oldPwTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oldPw" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/oldPwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/newPwTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPw" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/confirmNewPwTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmNewPw" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmNewPsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sendFormChangePwBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sendForm" />

</LinearLayout>