<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.uniba.di.nitwx.progettoMobile.SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/notification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text4DividerNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/notifications"
                android:textColor="#FF5252"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="5dp" />

            <View
                android:id="@+id/separator1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignBottom="@+id/text4DividerNotifications"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FF5252" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/separator1"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/notificationSwitchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/allow_notification"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/notificationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/permission_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_layout">

            <TextView
                android:id="@+id/text4DividerPermissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/permissions"
                android:textColor="#FF5252"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="5dp" />

            <View
                android:id="@+id/separator2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignBottom="@+id/text4DividerPermissions"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#FF5252" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/separator2"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/permissionSwitchTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/allowGeolocations"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/permissionSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
